--- a/item-service/src/main/resources/templates/basic/item.html
+++ b/item-service/src/main/resources/templates/basic/item.html
@@ -39,7 +39,7 @@
 
     <div class="row">
         <div class="col">
-            <button class="w-100 btn btn-primary btn-lg" onclick="location.href='editForm.html'" th:onclick="|location.href='@{/basic/items/${itemId}/edit(itemId=${item.getId()})}'|" type="button">상품 수정</button>
+            <button class="w-100 btn btn-primary btn-lg" onclick="location.href='editForm.html'" th:onclick="|location.href='@{/basic/items/{itemId}/edit(itemId=${item.getId()})}'|" type="button">상품 수정</button>
         </div>
         <div class="col">
             <button class="w-100 btn btn-secondary btn-lg" onclick="location.href='items.html'" th:onclick="|location.href='@{/basic/items}'|" type="button">목록으로</button>
